infrastructure/k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  selector:
    app: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-lb
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 9090
  selector:
    app: prometheus
